# amads

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.md  README.md  conftest.py  paper.md  pyproject.toml  pytest.ini  syncopation 4.py
.github/: pre-commit-error-message.txt
.github/workflows/: build.yml  documentation.yml  publish.yml  tests.yml
amads/: README.txt  __init__.py  all.py  ci.py  utils.py
amads/algorithm/: __init__.py  boundary.py  break_it_up.py  durdist1.py  durdist2.py  entropy.py  hz2midi.py  ismonophonic.py  ivdirdist1.py  ivdist1.py  ivdist2.py  ivsizedist1.py  nnotes.py  pc_set_functions.py  pcdist1.py  pcdist2.py  pitch_mean.py  pitchmean.py  scale.py  segment_gestalt.py  segmentgestalt.py  skyline.py  some_module.py
amads/algorithms/: __init__.py  boundary.py  break_it_up.py  complexity.py  durdist1.py  durdist2.py  entropy.py  ivdist1.py  ivdist2.py  ivsizedist1.py  mtype_tokenizer.py  ngrams.py  nnotes.py  pc_set_functions.py  pcdist1.py  pitch_mean.py  scale.py  segment_gestalt.py  skyline.py
amads/core/: __init__.py  basics.py  distribution.py  export.py  pitch.py  time_map.py  timemap.py  utils.py  vectors_sets.py
amads/harmony/: __init__.py
amads/io/: __init__.py  m21_midi_import.py  m21_xml_import.py  pianoroll.py  plotdist.py  pm_midi_import.py  pt_midi_import.py  pt_xml_import.py  ptscoreread.py  readscore.py
amads/melody/: __init__.py  boundary.py  fantastic.py  segment.py  segment_gestalt.py
amads/music/: README.txt  example.py
amads/pitch/: __init__.py  hz2midi.py  ismonophonic.py  ivdirdist1.py  ivdist1.py  ivdist2.py  pc_set_functions.py  pc_sets.py  pcdist1.py  (+4 more)
benchmarks/: notesize.py  pt_input_benchmark.py  timer.py
demos/: durdist2.py  ivdirdist1.py  ivdist1.py  ivdist1_test.py  ivdist2.py  ivsizedist1.py  melsim.py  mtype_tokenizer.py  music21_midi.py  music21_xml.py  partitura_midi.py  partitura_xml.py  partitura_xml_test.py  pcdist1.py  pcdist2.py  pianoroll.py  pianoroll_test.py  plotdist.py  scale.py  segmentgestalt.py  skyline.py  skyline_test.py
doc/: README.txt  design.txt  modules.rst  modules.txt  music21-notes.rst  music21-notes.txt
docs/: Makefile  conf.py  index.rst  introduction.rst  sg_execution_times.rst  testing.md
examples/: GALLERY_HEADER.rst  plot_boundary.py  plot_durdist1.py  plot_durdist2.py  plot_melsim.py  plot_parncutt_root_analysis.py  plot_sliding_window.py  scorebasics.py
music/: README.txt
musmart/: __init__.py
mustart/: README.txt
test/: boundary_test.py  durdist2_test.py  ivdirdist1_test.py  ivdist1_test.py  ivdist2_test.py  ivsizedist1_test.py  partitura_midi_test.py  pcdist1_test.py  pcdist2_test.py  pianoroll_test.py  plotdist_test.py  scale_test.py  segmentgestalt_test.py  utils_test.py
tests/: conftest.py  durdist1_test.py  durdist2_test.py  ivdirdist1_test.py  ivdist1_test.py  ivdist2_test.py  ivsizedist1_test.py  partitura_xml_test.py  pcdist1_test.py  pcdist2_test.py  pianoroll_test.py  scale_test.py  test_attractors.py  test_break_it_up.py  test_complexity.py  test_demos.py  test_fantastic.py  test_grid.py  test_import.py  test_import_all.py  test_key_profiles.py  test_melsim.py  test_meter.py  test_mtype_tokenizer.py  test_note.py  test_notedensity.py  test_npvi.py  test_parncutt_1988.py  test_partimenti.py  test_pc_sets.py  test_pitch.py  test_pitch_list_transformations.py  test_salami_slice.py  test_score.py  test_sliding_window.py  test_swing.py  test_tempo.py  test_time_variability.py  utils_test.py
tests_to_fix/: test_partimenti.py
(+149 files in other folders)
