[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musmart"
version = "0.1.0"
description = "A toolkit for symbolic music analysis"
readme = "README.md"
authors = [
    { name = "The AMADS team", email = "email@example.com" }
]
license = { text = "TODO" }  # Update with your actual license
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "partitura",
    "setuptools",  # required for partitura
    "music21",
    "pytest",
    "sphinx-gallery",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "pytest-cov",
]
test = [
    "pretty_midi",
    "pytest>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/music-computing/toolkit"  # Update with your repo URL

[tool.setuptools]
packages = ["musmart"]
