[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amads"
version = "0.1.0dev0"
description = "A toolkit for symbolic music analysis"
readme = "README.md"
maintainers = [
    { name = "Peter Harrison", email = "pmch2@cam.ac.uk"},
    { name = "Roger Dannenberg"},
    { name = "Mark Gotham"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy<1.12.0",
    "partitura",
    "setuptools",  # required for partitura
    "music21",
    "pytest",
    "sphinx-gallery",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "pre-commit",
]
test = [
    "pretty_midi",
    "pytest>=7.0.0",
    "pytest-cov",
]
melsim = [
    "pandas",
    "rpy2"
]

[project.urls]
"GitHub" = "https://github.com/music-computing/amads"  # Update with your repo URL
"Documentation website" = "https://music-computing.github.io/amads/"

[tool.setuptools.packages.find]
include = ["amads", "amads.*"]
